Bug fixing
Fixed a bug which caused some icons to be invisible

--- a/css/style-light.css
+++ b/css/style-light.css
@@ -221,7 +221,7 @@ h5.overline {
     letter-spacing: 2px;
     text-align: left;
     padding-top: 12px;
-    color: rgba(255,255,255,.40);
+    color: rgba(13, 32, 63, .48);
   }
 
 .section-title {
@@ -345,7 +345,7 @@ hr {
   display: flex;
   flex-wrap: wrap;
   justify-content: left;
-  margin:24px 0px;
+  margin:16px 0px;
   width:100%;
 }
 
@@ -512,9 +512,12 @@ top: -12px;
   }
 }
 
-span.dot {
+span.dot { 
+    font-size:24px;
+    vertical-align: middle;
     color:#00B0ED;
-}
+  }
+    
 
 
 ::placeholder {
@@ -700,6 +703,7 @@ span.dot {
 }
 @media (max-width:992px) {
   .featured {
+    width: 100%;
     padding:12px;
   }
 }
